xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__element_namespace_default.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml_default_ns(r#\"<doc xmlns=\"http://example.com\"><a/></doc>\"#,\n    \"doc / local-name()\", \"http://example.com\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        String(
                            "doc",
                        ),
                    ),
                ],
            },
        },
    ),
)
