xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__element_namespace_wrong.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc xmlns=\"http://example.com\"><a/></doc>\"#, \"doc / local-name()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [],
            },
        },
    ),
)
