xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__empty_sequence.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [],
            },
        },
    ),
)
