xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__every_quantifier_expr_false.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"every $x in (1, 2, 3) satisfies $x gt 2\")"
---
Atomic(
    Boolean(
        false,
    ),
)
