xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__every_quantifier_expr_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"every $x in (1, 2, 3) satisfies $x lt 5\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
