xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__every_quantifier_nested_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"every $x in (2, 3, 4), $y in (0, 1) satisfies $x gt $y\")"
---
Atomic(
    Boolean(
        true,
    ),
)
