xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__external_variables.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_with_variables(\"$foo + $bar\",\n    &[(ast::Name { name: \"foo\".to_string(), namespace: None },\n                    StackValue::Atomic(Atomic::Integer(1))),\n                (ast::Name { name: \"bar\".to_string(), namespace: None },\n                    StackValue::Atomic(Atomic::Integer(2)))])"
---
Ok(
    Atomic(
        Integer(
            3,
        ),
    ),
)
