xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__fn_double_slash_root_implicit.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"//a / fn:local-name()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        String(
                            "a",
                        ),
                    ),
                ],
            },
        },
    ),
)
